Fix role conflicts by disabling auto-owner

--- a/jicofo.conf
+++ b/jicofo.conf
@@ -21,6 +21,6 @@ jicofo {
 
   # Disable lobby to prevent isLobbySupported errors
   conference {
-    enable-auto-owner: true
+    enable-auto-owner: false
     enable-lobby: false
   }
